--- a/TFC_John/TFC_John.csproj
+++ b/TFC_John/TFC_John.csproj
@@ -135,6 +135,7 @@
     <Content Include="images\NewEmployee_32x32.png" />
     <Content Include="images\undraw_Add_files_re_v09g.png" />
     <Content Include="images\undraw_Country_side_re_0dou.png" />
+    <Content Include="images\undraw_Design_objectives_re_94pd.png" />
     <Content Include="images\undraw_Golden_gate_bridge_re_e8tc.png" />
     <Content Include="images\undraw_heavy_box_agqi.png" />
     <Content Include="images\undraw_Online_payments_re_y8f2.png" />
