--- a/TFC_John/TFC_John.csproj
+++ b/TFC_John/TFC_John.csproj
@@ -165,6 +165,39 @@
     <Folder Include="WindowsForms\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="icons\icons8_add_user_group_man_man.ico" />
+    <Content Include="icons\icons8_add_user_group_man_man_16.png" />
+    <Content Include="icons\icons8_add_user_group_man_man_32.png" />
+    <Content Include="icons\icons8_driving.ico" />
+    <Content Include="icons\icons8_driving_16.png" />
+    <Content Include="icons\icons8_driving_32.png" />
+    <Content Include="icons\icons8_home_address.ico" />
+    <Content Include="icons\icons8_home_address_16.png" />
+    <Content Include="icons\icons8_home_address_32.png" />
+    <Content Include="icons\icons8_male_user.ico" />
+    <Content Include="icons\icons8_male_user_16.png" />
+    <Content Include="icons\icons8_male_user_32.png" />
+    <Content Include="icons\icons8_money_bag_rupee.ico" />
+    <Content Include="icons\icons8_money_bag_rupee_16.png" />
+    <Content Include="icons\icons8_money_bag_rupee_32.png" />
+    <Content Include="icons\icons8_save_as.ico" />
+    <Content Include="icons\icons8_save_as_16.png" />
+    <Content Include="icons\icons8_save_as_32.png" />
+    <Content Include="icons\icons8_send_email.ico" />
+    <Content Include="icons\icons8_send_email_16.png" />
+    <Content Include="icons\icons8_send_email_32.png" />
+    <Content Include="icons\icons8_send_hot_list.ico" />
+    <Content Include="icons\icons8_send_hot_list_16.png" />
+    <Content Include="icons\icons8_send_hot_list_32.png" />
+    <Content Include="icons\icons8_settings.ico" />
+    <Content Include="icons\icons8_settings_16.png" />
+    <Content Include="icons\icons8_settings_32.png" />
+    <Content Include="icons\icons8_shopping_cart.ico" />
+    <Content Include="icons\icons8_shopping_cart_16.png" />
+    <Content Include="icons\icons8_shopping_cart_32.png" />
+    <Content Include="icons\icons8_update.ico" />
+    <Content Include="icons\icons8_update_16.png" />
+    <Content Include="icons\icons8_update_32.png" />
     <Content Include="images\Advance_16.png" />
     <Content Include="images\avtar-2.png" />
     <Content Include="images\NewEmployee_32x32.png" />
