--- a/TFC_John/TFC_John.csproj
+++ b/TFC_John/TFC_John.csproj
@@ -168,18 +168,33 @@
     <Content Include="icons\icons8_add_user_group_man_man.ico" />
     <Content Include="icons\icons8_add_user_group_man_man_16.png" />
     <Content Include="icons\icons8_add_user_group_man_man_32.png" />
+    <Content Include="icons\icons8_car.ico" />
+    <Content Include="icons\icons8_car_16.png" />
+    <Content Include="icons\icons8_car_32.png" />
     <Content Include="icons\icons8_driving.ico" />
     <Content Include="icons\icons8_driving_16.png" />
     <Content Include="icons\icons8_driving_32.png" />
+    <Content Include="icons\icons8_file_submodule.ico" />
+    <Content Include="icons\icons8_file_submodule_32.png" />
     <Content Include="icons\icons8_home_address.ico" />
     <Content Include="icons\icons8_home_address_16.png" />
     <Content Include="icons\icons8_home_address_32.png" />
+    <Content Include="icons\icons8_logout_rounded_left.ico" />
+    <Content Include="icons\icons8_logout_rounded_left_16.png" />
+    <Content Include="icons\icons8_logout_rounded_left_32.png" />
     <Content Include="icons\icons8_male_user.ico" />
     <Content Include="icons\icons8_male_user_16.png" />
     <Content Include="icons\icons8_male_user_32.png" />
+    <Content Include="icons\icons8_menu_squared.ico" />
+    <Content Include="icons\icons8_menu_squared_32.png" />
     <Content Include="icons\icons8_money_bag_rupee.ico" />
     <Content Include="icons\icons8_money_bag_rupee_16.png" />
     <Content Include="icons\icons8_money_bag_rupee_32.png" />
+    <Content Include="icons\icons8_new.ico" />
+    <Content Include="icons\icons8_new1.ico" />
+    <Content Include="icons\icons8_new1_16.png" />
+    <Content Include="icons\icons8_new1_32.png" />
+    <Content Include="icons\icons8_new_32.png" />
     <Content Include="icons\icons8_save_as.ico" />
     <Content Include="icons\icons8_save_as_16.png" />
     <Content Include="icons\icons8_save_as_32.png" />
@@ -193,8 +208,10 @@
     <Content Include="icons\icons8_settings_16.png" />
     <Content Include="icons\icons8_settings_32.png" />
     <Content Include="icons\icons8_shopping_cart.ico" />
+    <Content Include="icons\icons8_shopping_cart2.ico" />
     <Content Include="icons\icons8_shopping_cart_16.png" />
     <Content Include="icons\icons8_shopping_cart_32.png" />
+    <Content Include="icons\icons8_shopping_cart_322.png" />
     <Content Include="icons\icons8_update.ico" />
     <Content Include="icons\icons8_update_16.png" />
     <Content Include="icons\icons8_update_32.png" />
