--- a/TFC_John/App.config
+++ b/TFC_John/App.config
@@ -1,5 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <connectionStrings>
+        <add name="DESKTOP-8MK45AK\SA_JOHN_TFC_Connection" connectionString="XpoProvider=MSSqlServer;data source=DESKTOP-8MK45AK\SA;user id=;password=;initial catalog=JOHN_TFC;Persist Security Info=true" />
+        <add name="DESKTOP-8MK45AK\SA_JOHN_TFC_Connection 1" connectionString="XpoProvider=MSSqlServer;data source=DESKTOP-8MK45AK\SA;user id=;password=;initial catalog=JOHN_TFC;Persist Security Info=true" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
