--- a/TFC_John/TFC_John.csproj
+++ b/TFC_John/TFC_John.csproj
@@ -35,9 +35,23 @@
     <Reference Include="Bunifu_UI_v1.52">
       <HintPath>C:\Users\WinnerPC\Desktop\dll\Bunifu_UI_v1.52.dll</HintPath>
     </Reference>
+    <Reference Include="DevExpress.Charts.v15.2.Core, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Data.v15.2, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.DataAccess.v15.2, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Office.v15.2.Core, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.PivotGrid.v15.2.Core, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Printing.v15.2.Core, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.RichEdit.v15.2.Core, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Sparkline.v15.2.Core, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Utils.v15.2, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Utils.v15.2.UI, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Xpo.v15.2, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraCharts.v15.2, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraEditors.v15.2, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraGauges.v15.2.Core, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraPrinting.v15.2, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraReports.v15.2, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraReports.v15.2.Extensions, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="Guna.UI2">
       <HintPath>C:\Users\WinnerPC\Desktop\dll\Guna.UI2.dll</HintPath>
     </Reference>
@@ -90,6 +104,24 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="sorties\Bordereau_expedition.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="sorties\Bordereau_expedition.Designer.cs">
+      <DependentUpon>Bordereau_expedition.cs</DependentUpon>
+    </Compile>
+    <Compile Include="sorties\facture.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="sorties\facture.Designer.cs">
+      <DependentUpon>facture.cs</DependentUpon>
+    </Compile>
+    <Compile Include="sorties\Liste_cleints.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="sorties\Liste_cleints.Designer.cs">
+      <DependentUpon>Liste_cleints.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\Frm_agent.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -126,6 +158,7 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -136,6 +169,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="sorties\Bordereau_expedition.resx">
+      <DependentUpon>Bordereau_expedition.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sorties\Liste_cleints.resx">
+      <DependentUpon>Liste_cleints.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserControls\Frm_agent.resx">
       <DependentUpon>Frm_agent.cs</DependentUpon>
     </EmbeddedResource>
@@ -217,6 +256,8 @@
     <Content Include="icons\icons8_update_32.png" />
     <Content Include="images\Advance_16.png" />
     <Content Include="images\avtar-2.png" />
+    <Content Include="images\DRAPEAU RDC.gif" />
+    <Content Include="images\IMG_4040.PNG" />
     <Content Include="images\NewEmployee_32x32.png" />
     <Content Include="images\undraw_Add_files_re_v09g.png" />
     <Content Include="images\undraw_Country_side_re_0dou.png" />
